--- a/JOBXRegistration/app/src/main/res/layout/activity_add_user.xml
+++ b/JOBXRegistration/app/src/main/res/layout/activity_add_user.xml
@@ -21,8 +21,8 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/addPhoto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:src="@drawable/userphoto"
