--- a/JobX2/app/src/main/res/layout/activity_sign_up_otp.xml
+++ b/JobX2/app/src/main/res/layout/activity_sign_up_otp.xml
@@ -28,43 +28,58 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
 
-    <TextView
-        android:id="@+id/enter"
+
+    <!-- <EditText
+         android:id="@+id/otp"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_marginStart="100dp"
+         android:layout_marginTop="44dp"
+         android:layout_marginEnd="101dp"
+         android:ems="10"
+         android:hint="OTP"
+         android:inputType="phone"
+         android:minHeight="48dp"
+         app:layout_constraintEnd_toEndOf="parent"
+         app:layout_constraintStart_toStartOf="parent"
+         app:layout_constraintTop_toBottomOf="@+id/ver" />-->
+
+<!--    <com.chaos.view.PinView
+        android:id="@+id/OTP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Enter Your Phone Number"
-        android:textColor="@color/black"
-        android:textSize="16sp"
+        android:layout_marginTop="32dp"
+        app:itemCount="6"
+
+        app:itemHeight="50dp"
+        app:itemWidth="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/ver" />-->
 
     <TextView
         android:id="@+id/ver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="28dp"
         android:text="JOBX will send you a verification code"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enter" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <EditText
-        android:id="@+id/otp"
+    <TextView
+        android:id="@+id/resend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="101dp"
-        android:ems="10"
-        android:hint="OTP"
-        android:inputType="phone"
-        android:minHeight="48dp"
+        android:layout_marginTop="8dp"
+        android:text="Did Not Recieve An OTP Yet? Tap To Resend"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ver" />
 
@@ -73,14 +88,82 @@
         style="?borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="12dp"
         android:backgroundTint="#fff"
         android:text="Next"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/otp" />
+        app:layout_constraintTop_toBottomOf="@+id/input6" />
+
+    <EditText
+        android:id="@+id/input1"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="4dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toStartOf="@+id/input2"
+        app:layout_constraintTop_toBottomOf="@+id/ver" />
+
+    <EditText
+        android:id="@+id/input2"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="4dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toStartOf="@+id/input3"
+        app:layout_constraintTop_toBottomOf="@+id/ver" />
+
+    <EditText
+        android:id="@+id/input3"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="4dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toStartOf="@+id/input4"
+        app:layout_constraintTop_toBottomOf="@+id/ver" />
+
+    <EditText
+        android:id="@+id/input4"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="4dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toStartOf="@+id/input5"
+        app:layout_constraintTop_toBottomOf="@+id/ver" />
+
+    <EditText
+        android:id="@+id/input5"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="4dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toStartOf="@+id/input6"
+        app:layout_constraintTop_toBottomOf="@+id/ver" />
+
+    <EditText
+        android:id="@+id/input6"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="40dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ver" />
+ />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
