--- a/JobX2/app/src/main/res/layout/activity_occupation_types.xml
+++ b/JobX2/app/src/main/res/layout/activity_occupation_types.xml
@@ -184,7 +184,7 @@
         android:layout_height="100dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
-        android:src="@drawable/cleaner"
+        android:src="@drawable/labour"
         app:civ_border_color="#FFF"
         app:civ_border_width="2dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -206,7 +206,7 @@
         android:layout_height="100dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="12dp"
-        android:src="@drawable/mover"
+        android:src="@drawable/movers"
         app:civ_border_color="#FFF"
         app:civ_border_width="2dp"
         app:layout_constraintStart_toEndOf="@+id/labour"
@@ -231,7 +231,7 @@
         android:layout_height="100dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="12dp"
-        android:src="@drawable/cleaner"
+        android:src="@drawable/blacksmith"
         app:civ_border_color="#FFF"
         app:civ_border_width="2dp"
         app:layout_constraintStart_toEndOf="@+id/movers"
