--- a/JobX2/app/src/main/res/layout/fragment_descfragment.xml
+++ b/JobX2/app/src/main/res/layout/fragment_descfragment.xml
@@ -5,10 +5,115 @@
     android:layout_height="match_parent"
     tools:context=".descfragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:padding="15dp">
+
+
+        <TextView
+            android:id="@+id/nametext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:text="First Name"
+            android:textColor="#000"
+            android:textSize="20sp"
+
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/occupationText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/nametext"
+            android:layout_marginLeft="10dp"
+            android:text="Occupation: "
+            android:textColor="#000"
+            android:textSize="25sp" />
+
+
+        <TextView
+            android:id="@+id/years"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/occupationText"
+            android:layout_marginLeft="10dp"
+            android:text="5"
+            android:textColor="#000"
+            android:textSize="50sp" />
+
+        <TextView
+            android:id="@+id/yearsOf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/years"
+            android:layout_marginLeft="7dp"
+            android:layout_marginBottom="23dp"
+            android:layout_toRightOf="@+id/years"
+            android:text="Years of experience"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/partTimeNonChanging"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/years"
+            android:text="Part Time: ₹" />
+
+        <TextView
+            android:id="@+id/partTime"
+            android:layout_marginLeft="75dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/years"
+            android:text="x" />
+        <TextView
+            android:id="@+id/perHour"
+            android:layout_marginLeft="95dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/years"
+            android:text="/hr" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Full Time: ₹"
+            android:layout_toRightOf="@+id/partTimeNonChanging"
+            android:id="@+id/fullTimeNonChanging"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="130dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="y"
+            android:layout_toRightOf="@+id/partTimeNonChanging"
+            android:id="@+id/fullTime"
+            android:layout_marginLeft="175dp"
+            android:layout_marginTop="130dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="/hr"
+            android:layout_toRightOf="@+id/partTime"
+            android:id="@+id/fullTimeperHour"
+            android:layout_marginLeft="190dp"
+            android:layout_marginTop="130dp"/>
+
+        <TextView
+            android:id="@+id/aadhar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6.9dp"
+            android:layout_below="@+id/partTimeNonChanging"
+            android:text="Aadhar Card Number" />
+
+
+
+
+    </RelativeLayout>
 
 </FrameLayout>
