Confirmation Page Switch

--- a/JobX2/app/src/main/res/layout/activity_part_time_confirm.xml
+++ b/JobX2/app/src/main/res/layout/activity_part_time_confirm.xml
@@ -136,14 +136,15 @@
     </RelativeLayout>
 
     <Button
-        android:id="@+id/btnConfirm"
+        android:id="@+id/btnCalculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="112dp"
         android:backgroundTint="#217C7E"
-        android:text="Confirm Hire"
+        android:text="Calculate"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.223"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
 
@@ -180,6 +181,18 @@
         android:text="The total is: "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/btnConfirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="64dp"
+        android:backgroundTint="#217C7E"
+        android:text="Confirm Hire"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/totalTime" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
