--- a/JobX2/app/src/main/res/layout/activity_contact_employee.xml
+++ b/JobX2/app/src/main/res/layout/activity_contact_employee.xml
@@ -5,9 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
-    tools:context=".partTimeConfirm">
-
+    android:backgroundTint="@color/white"
+    tools:context=".ContactEmployee">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -133,77 +132,72 @@
             android:text="y" />
 
         <TextView
-            android:id="@+id/number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/number"
             android:layout_below="@+id/fullTime"
-            android:layout_marginLeft="78dp"
-            android:layout_marginTop="5dp"
+            android:text="number is"
             android:layout_toRightOf="@+id/aadhar"
-            android:text="number is" />
+            android:layout_marginLeft="78dp"
+            android:layout_marginTop="5dp"/>
 
 
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/btnCalculate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
-        android:backgroundTint="#217C7E"
-        android:text="Calculate"
-        android:textAllCaps="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.223"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
-
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/sendAnSms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="36dp"
-        android:textColor="#515050"
-        android:text="Enter Number Of Hours You Want to hire: "
+        android:layout_marginTop="16dp"
+        android:text="Send SMS To: "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
+
+    <!--<TextView
+        android:id="@+id/receiverNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="number"
+        app:layout_constraintStart_toEndOf="@+id/sendAnSms"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
+-->
 
     <EditText
-        android:id="@+id/hours"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
-
-    <TextView
-        android:id="@+id/totalTime"
-        android:layout_width="wrap_content"
+        android:id="@+id/details"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:textColor="#515050"
-
-        android:text="The total is: "
+        android:layout_marginTop="32dp"
+        android:ems="10"
+        android:inputType="textMultiLine"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
+        android:hint="Enter Address, Name, Number"
+        app:layout_constraintTop_toBottomOf="@+id/receiverNumber" />
 
     <Button
-        android:id="@+id/btnContact"
+        android:id="@+id/btnSend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="64dp"
-        android:backgroundTint="#217C7E"
-        android:text="Contact"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="12dp"
+        android:text="Send"
         android:textAllCaps="false"
+        android:backgroundTint="#217C7E"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/totalTime" />
+        app:layout_constraintTop_toBottomOf="@+id/details" />
+
+    <EditText
+        android:id="@+id/receiverNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Reciver's Number"
+        android:inputType="phone"
+        app:layout_constraintStart_toEndOf="@+id/sendAnSms"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
