--- a/JobX2/app/src/main/res/layout/activity_full_time_confirm.xml
+++ b/JobX2/app/src/main/res/layout/activity_full_time_confirm.xml
@@ -37,6 +37,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2">
+        <TextView
+            android:id="@+id/number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/fullTime"
+            android:layout_marginLeft="78dp"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@+id/aadhar"
+            android:text="number is" />
+
 
 
         <TextView
