--- a/JobX2/app/src/main/res/layout/fragment_descfragment.xml
+++ b/JobX2/app/src/main/res/layout/fragment_descfragment.xml
@@ -140,6 +140,16 @@
             android:text="Full Day"
             android:textAllCaps="false" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/number"
+            android:layout_below="@+id/fullTime"
+            android:text="number is"
+            android:layout_toRightOf="@+id/aadhar"
+            android:layout_marginLeft="78dp"
+            android:layout_marginTop="5dp"/>
+
 
     </RelativeLayout>
 
