--- a/JobX2/app/src/main/res/layout/activity_sign_up_details.xml
+++ b/JobX2/app/src/main/res/layout/activity_sign_up_details.xml
@@ -29,7 +29,7 @@
         app:srcCompat="@drawable/logo" />
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/addPhoto"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -62,31 +62,19 @@
             app:layout_constraintTop_toBottomOf="@+id/enter"
             app:srcCompat="@drawable/userphoto" /> !-->
 
-    <TextView
-        android:id="@+id/tap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="72dp"
-        android:text="Tap the icon to take a picture"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/addPhoto"
-        app:layout_constraintTop_toBottomOf="@+id/enter" />
-
     <EditText
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="40dp"
         android:ems="10"
+        android:hint="Name"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:hint="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tap" />
+        app:layout_constraintTop_toBottomOf="@+id/enter" />
 
     <EditText
         android:id="@+id/address"
